# nixel

./: .gitignore  README.md  linr.py  pyproject.toml  requirements.txt  run_exp.sh
dev_scripts/: clean_install_all.sh  create_conda_test_environment.sh  deep_clean_conda.sh
docs/: API_def.md  theory-v1.md  theory-v2.md
experiments/: _paths.py  ab_adapt_theta.py  ab_progressive.py  build_databases.py  configs.py  fit_one.py  pretrain.py  recon.py  reconstruct.py  run_exp.sh  run_pretrain.py  run_pretrain.sh  run_recon.sh
experiments/archive/: README.md  ab_adapt_sweep.py  ab_adapt_theta.py  ab_progressive.py  ab_reconstruct.py  ab_warmstart.py  fit_one.py  pretrain_lr_sweep.py  recon_lr_sweep.py  recon_sweep_1k.py  recon_theta_sweep.py
tests/: test_bands.py  test_resume.py
